--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,25 +4,13 @@
     <title>FurimaUserId</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
-
-    <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <script type="text/javascript" src="https://js.pay.jp/v1/"></script>
+    <%= stylesheet_link_tag 'application', media: 'all'%>
+    <%= javascript_pack_tag 'application' %>
   </head>
 
   <body>
-      <header class="header">
-      <div class="header__bar row">
-        <h1 class="grid-6"><a href="/">Furima</a></h1>
-        <div class="user_nav grid-6">
-          <a class="post" href="/posts/new">投稿する</a>
-        </div>
-      </div>
-    </header>
     <%= yield %>
-        <footer>
-      <p>
-        Copyright Furima 2022.
-      </p>
-    </footer>
   </body>
+
 </html>
