--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,115 +1,102 @@
-<div class="contents row">
-<header class="second-header">
-  <a href="/">
-    <img class="second-logo" src="">
-  </a>
-</header>
-<%= form_with model: @user, url: user_registration_path, id: 'new_user', class: 'new_user', local: true do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
+<%= render "shared/second-header"%>
+<%= form_with model: @user, url: new_user_registration_path, class: 'registration-main', local: true do |f| %>
 
-  <div class="container">
-      <div class="from-header">
-        <h1 class="from-header-text">会員情報入力</h1>
+  <div class="form-wrap">
+      <div class='form-header'>
+        <h1 class='form-header-text'>
+          会員情報入力
+        </h1>
       </div>
 
-      <div class="field">
-        <div class="field-text-wrap">
-          <label class="field-text"><%= f.label :ニックネーム %></label>
-          <span class="indispensable">必須</span>
-        </div>
-        <textarea class="input-default" id="username" placeholder="例）furima太郎" maxlength="40" autofocus="autofucus" name="user[username]"></textarea>
-      </div>
-
-      <div class="field">
-        <div class="field-text-wrap">
-          <label class="field-text"><%= f.label :メールアドレス , unique: true %></label>
-          <span class="indispensable">必須</span>
-        </div>
-        <input class="input-default" id="email" placeholder="PC•携帯どちらでも可" type="email" value name="user[email]" kl_vkbd_parsed="true">
-      </div>
-
-      <div class="field">
-        <div class="field-text-wrap">
-          <label class="field-text"><%= f.label :パスワード %></label>
-          <span class="indispensable">必須</span>
-        </div>
-          <% if @minimum_password_length %>
-          <% end %>
-        <%= f.password_field :password, autocomplete: "off" %>
-      </div>
-
-      <div class="field">
-        <div class="field-text-wrap">
-          <label class="field-text"><%= f.label :パスワード %><span>(確認)</span></label>
-          <span class="indispensable">必須</span>
-        </div>
-          <%= f.password_field :encrypted_password, autocomplete: "off" %>
-      </div>
-
-      <div class="field">      
-        <div class="field-info-header"> 本人確認 </div>
-        <div class="field-info-text"> 安心・安全にご利用いただくために、お客さまの本人情報の登録にご協力ください。他のお客さまに公開されることはありません。</div>
-      </div>
-
-      <div class="field">
-        <div class="field-text-wrap">
-          <label class="field-text"><%= f.label :お名前 %><span>(全角)</span></label>
-          <span class="indispensable">必須</span>
-        </div>
-        <div class="input-name-wrap">
-          <textarea class="input-name" id="last_name" placeholder="例）山田" ></textarea>
-          <textarea class="input-name" id="first_name" placeholder="例）太郎" ></textarea>
-        </div>
-      </div>
-
-      <div class="field">
-        <div class="field-text-wrap">
-          <label class="field-text"><%= f.label :お名前カナ %><span>(全角)</span></label>
-          <span class="indispensable">必須</span>
-        </div>
-        <div class="input-name-wrap">
-          <textarea class="input-name" id="last_name_kana" placeholder="例）ヤマダ" ></textarea>
-          <textarea class="input-name" id="first_name_kana" placeholder="例）タロウ" ></textarea>
-        </div>
-      </div>
-
-      <div class="field">
-        <div class="field-text-wrap">
-          <label class="field-text"><%= f.label :生年月日 %></label>
-          <span class="indispensable">必須</span>
-        </div>
-        <div class="birth_date_field">
-          <%= raw sprintf(
-                    f.date_select(
-                      :birth_day,
-                      use_month_numbers: true,
-                      start_year: 1930,
-                      end_year: (Time.now.year - 5),
-                      default: Date.new(1989, 1, 1),
-                      date_separator: '%s'),
-                    '年 ', '月 ') + '日' %>
-        </div>
-        <p class="info-text">※ 本人情報は正しく入力してください。会員登録後、修正するにはお時間を頂く場合があります。</p>
-      </div>
-      <div class="field">
-        <h2 class="field-bottom-text">
-          「会員登録」のボタンを押すことにより、
-          <span>利用規約</span>
-          に同意したものとみなします　
-        </h2>
-      </div>
-      <div class="register-btn">
-        <input type="submit" name="commit" value="会員登録" class="register-red-btn" data-disable-with="会員登録" kl_vkbd_parsed="true">
-      </div>
-      <p class="register-info">本人情報の登録について</p>
-    <% end %>
+  <div class="form-group">
+    <div class='form-text-wrap'>
+      <label class="form-text">ニックネーム</label>
+      <span class="indispensable">必須</span>
+    </div>
+    <%= f.text_area :username, class:"input-default", id:"nickname", placeholder:"例) furima太郎", maxlength:"40" %>
   </div>
+  <div class="form-group">
+    <div class='form-text-wrap'>
+      <label class="form-text">メールアドレス</label>
+      <span class="indispensable">必須</span>
+    </div>
+    <%= f.email_field :email, class:"input-default", id:"email", placeholder:"PC・携帯どちらでも可", autofocus: true %>
+  </div>
+  <div class="form-group">
+    <div class='form-text-wrap'>
+      <label class="form-text">パスワード</label>
+      <span class="indispensable">必須</span>
+    </div>
+    <%= f.password_field :password, class:"input-default", id:"password", placeholder:"6文字以上の半角英数字" %>
+    <p class='info-text'>※英字と数字の両方を含めて設定してください</p>
+  </div>
+  <div class="form-group">
+    <div class='form-text-wrap'>
+      <label class="form-text">パスワード(確認)</label>
+      <span class="indispensable">必須</span>
+    </div>
+    <%= f.password_field :password_confirmation, class:"input-default", id:"password-confirmation", placeholder:"同じパスワードを入力して下さい" %>
+  </div>
+  <div class="form-group">
+    <p class='form-info-header'>
+      本人確認
+    </p>
+    <p class='form-info-text'>
+      安心・安全にご利用いただくために、お客さまの本人情報の登録にご協力ください。他のお客さまに公開されることはありません。
+    </p>
+  </div>
+  <div class="form-group">
+    <div class='form-text-wrap'>
+      <label class="form-text">お名前(全角)</label>
+      <span class="indispensable">必須</span>
+    </div>
+    <div class='input-name-wrap'>
+      <%= f.text_area :last_name, class:"input-name", id:"last-name", placeholder:"例) 山田" %>
+      <%= f.text_area :first_name, class:"input-name", id:"first-name", placeholder:"例) 陸太郎" %>
+    </div>
+  </div>
+  <div class="form-group">
+    <div class='form-text-wrap'>
+      <label class="form-text">お名前カナ(全角)</label>
+      <span class="indispensable">必須</span>
+    </div>
+    <div class='input-name-wrap'>
+      <%= f.text_area :last_name_kana, class:"input-name", id:"last-name-kana", placeholder:"例) ヤマダ" %>
+      <%= f.text_area :first_name_kana, class:"input-name", id:"first-name-kana", placeholder:"例) リクタロウ" %>
+    </div>
+  </div>
+  <div class="form-group">
+    <div class='form-text-wrap'>
+      <label class="form-text">生年月日</label>
+      <span class="indispensable">必須</span>
+    </div>
+    <div class='input-birth-wrap'>
+      <%= raw sprintf(
+                  f.date_select(
+                    :birth_day,
+                    class:'select-birth',
+                    id:"birth-date",
+                    use_month_numbers: true,
+                    prompt:'--',
+                    start_year: 1930,
+                    end_year: (Time.now.year - 5),
+                    date_separator: '%s'),
+                  "<p> 年 </p>", "<p> 月 </p>") + "<p> 日 </p>" %>
+    </div>
+    <p class='info-text'>※ 本人情報は正しく入力してください。会員登録後、修正するにはお時間を頂く場合があります。</p>
+  </div>
+  <div class="form-group">
+    <h2 class='form-bottom-text'>
+      「会員登録」のボタンを押すことにより、
+      <span>利用規約</span>
+      <br>に同意したものとみなします
+    </h2>
+  </div>
+  <div class='register-btn'>
+    <%= f.submit "会員登録" ,class:"register-red-btn" %>
+  </div>
+  <p class='register-info'>本人情報の登録について</p>
 </div>
-<footer class="second-fotter">
-  <div class="second-fotter-text-wrap">
-    <p class="second-fotter-text">プライバシーポリシー</p>
-    <p class="second-fotter-text">FURIMA利用規約</p>
-    <p class="second-fotter-text">特定商取引に関する表記</p>
-  </div>
-  <img class="second-footter-logo">
-</footer>
+<% end %>
+
+<%= render "shared/second-footer"%>
