--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -129,19 +129,21 @@
     <ul class='item-lists'>
 
       <%# 商品のインスタンス変数になにか入っている場合、中身のすべてを展開できるようにしましょう %>
-      <li class='list'>
-        <%= link_to "#" do %>
-         <% @items.each do |item| %>
+     <% if @items.present? %>
+      <% @items.each do |item| %>
+       <li class='list'>
+        <%= link_to item_path(item.id) do %>
           <div class='item-img-content'>
-          <%= image_tag item.image, class: "item-img" if item.image.present? %><br>
+          <%= image_tag item.image, class: "item-img" %>
 
           <%# 商品が売れていればsold outを表示しましょう %>
           <%# <% if item.purchase.present? %>
-          <div class='sold-out'>
-            <span>Sold Out!!</span>
-          </div>
-          <%# //商品が売れていればsold outを表示しましょう %>
+            <div class='sold-out'>
+              <span>Sold Out!!</span>
+            </div>
           <%# <% end %>
+          <%# //商品が売れていればsold outを表示しましょう %>
+          
           </div>
           <div class='item-info'>
             <h3 class='item-name'>
@@ -156,11 +158,13 @@
             </div>
           </div>
          <% end %>
-        <% end %>
-      </li>
+       </li>
+      <% end %>
+    
       <%# //商品のインスタンス変数になにか入っている場合、中身のすべてを展開できるようにしましょう %>
 
       <%# 商品がない場合は以下のダミー商品が表示されるようにしましょう %>
+      <% else %>
       <%# 商品がある場合は表示されないようにしましょう %>
       <li class='list'>
         <%= link_to '#' do %>
@@ -179,6 +183,7 @@
         </div>
         <% end %>
       </li>
+     <% end %>
       <%# //商品がある場合は表示されないようにしましょう %>
       <%# //商品がない場合は以下のダミー商品が表示されるようにしましょう %>
     </ul>
