--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -127,10 +127,10 @@
       新規投稿商品
     </div>
     <ul class='item-lists'>
-     <% if @items.present? %>
+      <% if @items.present? %>
       <% @items.each do |item| %>
        <li class='list'>
-        <%= link_to '#' do %>
+        <%= link_to item_path(item.id) do %>
           <div class='item-img-content'>
           <%= image_tag item.image, class: "item-img" %>
 
@@ -177,7 +177,7 @@
         </div>
         <% end %>
       </li>
-     <% end %>
+      <% end %>
     </ul>
   </div>
   <%# /商品一覧 %>
