--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -25,16 +25,14 @@
     </div>            
 
   <% if user_signed_in? %>
-    <% if current_user.id == @item.user_id %>
-      <% if @item.present? %>
+    <% if current_user.id == @item.user_id && @item.order.nil? %>
       <%= link_to "商品の編集", edit_item_path(@item.id), class: "item-red-btn" %>
         <p class="or-text">or</p>
       <%= link_to "削除", item_path(@item.id), method: :delete, class:"item-destroy" %>
-      <% end %>
     <% elsif @item.order.present? %>
-    <%= link_to "購入画面に進む", root_path, class:"item-red-btn"%>
+      <%= link_to " " %>
     <% else %>
-    <%= link_to "購入画面に進む", item_orders_path(@item.id), class:"item-red-btn"%>
+      <%= link_to "購入画面に進む", item_orders_path(@item.id), class:"item-red-btn"%>
     <% end %>      
   <% end %>
 
